# fip2013

./: .gitignore  Socket.cpp  a.out  client.py  client2.cpp  server.py  simple_client  simple_client_main.cpp
IntelliPresence/: Camera.py  Cinematography.py  DecisionWithTestValues.py  atem_control.py  config.py  setup.py
IntelliPresence/IntelliPresence/: __init__.py
IntelliPresence/IntelliPresence/HAL/: MCSCamera.py
IntelliPresence/intellipresence/: __init__.py  armiture.py  config.py  controller.py  util.py
IntelliPresence/intellipresence/hal/: mcs_camera.py  motor.py
IntelliPresence/intellipresence/hal/atem/: atem.py  atem_com.py  atem_thread.py
IntelliPresence/intellipresence/hal/mcs/: camera.py  thread_server.py
IntelliPresence/tests/: __init__.py
IntelliPresence/tests/hal_tests/: mcs_camera_tests.py
IntelliPresenceOld/: Camera.py  Cinematography.py  DecisionWithTestValues.py  atem.py
IntelliPresenceRetro/: armiture.py  camera.py  config.py  controller.py  motor.py  thread_server.py
MCSCapture/: CMakeCache.txt  CMakeLists.bak  CMakeLists.txt  Makefile  camcv  camcv2  camcv2.c  camcv_vid0  camcv_vid0.c  camcv_vid1  camcv_vid1.cpp  cmake_install.cmake
networkTestCode/: Camera.py  README.md  camera.py  client.cpp.save  client3.cpp  networkConfig.txt  server.py  simple_client  simple_client_main.cpp  simple_server  threadMaster.py  threadServer.py
